--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,12 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Test</title>
-        <link rel="stylesheet" href="/styles/resets.css">
-        <link rel="stylesheet" href="/styles/base.css">
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/form.css">
-        <link rel="stylesheet" href="/styles/footer.css">
+        <title>Evaluate News</title>
     </head>
 
     <body>
@@ -27,7 +22,7 @@
                     <h2>Analyze News</h2>
                     <form>
                         <label for="articleUrl">Enter An Article URL:</label>
-                        <input id="articleUrl" type="text" name="input" value="" onblur="onBlur()" placeholder="https://www.exapmple.com">
+                        <input id="articleUrl" type="text" name="input" value="" placeholder="https://www.example.com">
                         <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                     </form>
                 </div>
@@ -40,7 +35,7 @@
         </main>
 
         <footer>
-            <p>Benjamin Hossain</p>
+            <p> &copy Benjamin Hossain</p>
         </footer>
 
     </body>
