--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -10,3 +10,22 @@ input {
     line-height: 16px;
     margin: 10px 0;
 }
+
+#form_box h1 {
+    font-size: 3em;
+    margin-bottom: 8px;
+}
+
+#evaluation {
+    h2 {
+        font-size: 2em;
+        text-decoration: underline;
+    }
+    h3 {
+        font-size: 1.5em;
+        margin-bottom: 3px
+    }
+    #text {
+        font-size: 1em;
+    }
+}
