--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,7 +19,7 @@
         <main>
             <section>
                 <div id = "form_box">
-                    <h2>Analyze News</h2>
+                    <h1>Analyze News</h1>
                     <form>
                         <label for="articleUrl">Enter An Article URL:</label>
                         <input id="articleUrl" type="text" name="input" value="" placeholder="https://www.example.com">
@@ -28,9 +28,10 @@
                 </div>
             </section>
             <section id = "evaluation">
-                <h1>Analysis</h1>
+                <h2>Analysis</h2> <br>
                 <h3>Polarity: <span id="polarity"></span></h3>
                 <h3>Subjectivity: <span id="subjectivity"></span></h3>
+                <br>
                 <span id="text"></span>
             <section>
         </main>
